set specific height on #info so it scrolls when content overflows; fixes #68

--- a/css/transmission.css
+++ b/css/transmission.css
@@ -524,6 +524,7 @@ ul#sorts li a {
 /* info */
 #info {
   width: 379px;
+  height: 500px;
   float: left;
   padding: 1em 10px 1.5em 10px;
   background-color: #FAFAFA;
